# serverless-fastapi

./: .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  package-lock.json  package.json  pyproject.toml  serverless.yml
api/: pyproject.toml
api/app/db/migrations/: env.py
api/app/models/domains/: __init__.py
app/db/migrations/: env.py
app/db/migrations/versions/: 8c3002db12cf_.py
app/models/domains/: __init__.py  users.py
my-dev-api/: .isort.cfg  README.md  pyproject.toml  requirements.txt  sqlite.db
my-dev-api/app/db/migrations/versions/: 8c3002db12cf_.py
my-dev-api/app/models/domains/: base_class.py
