[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["JoonShik <jshong0907@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
black = "^22.6.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
alembic = "^1.8.1"
autoflake = "^1.4"
isort = "^5.10.1"
pre-commit = "^2.20.0"
mangum = "^0.15.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
